--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 19 22:38:50 BRT 2025
-sdk.dir=C:\\Users\\Caramello\\AppData\\Local\\Android\\Sdk
+#Tue May 20 20:17:47 BRT 2025
+sdk.dir=C\:\\Users\\Perei\\AppData\\Local\\Android\\Sdk
